[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vendi-sampling"
version = "0.0.1"
authors = [
  { name="Amey Pasarkar", email="ap7956@princeton.edu" },
]
description = "Sampling method to increase the efficiency and efficacy of the exploration of molecular conformation spaces."
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "matplotlib",
    "torch",
    "typer"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
